--- a/rooappendix.html
+++ b/rooappendix.html
@@ -1365,6 +1365,12 @@ inaugurated. </span>
 			<h2>THE MANY TITLES AND NAMES OF THE DOCTOR</h2>
 			<ul>
 				<li>
+					<span class="A-tv">The Timeless Child</span>
+				</li>
+				<li>
+					<span class="A-licensed">Jahanna?</span>
+				</li>
+				<li>
 					<span class="A-audiobook">The Other</span>
 				</li>
 				<li>
@@ -1390,7 +1396,7 @@ inaugurated. </span>
 					<span class="A-tv">Doctor Forman</span>
 				</li>
 				<li>
-					<span class="A-tv">Doctor Who </span>
+					<span class="A-tv">Doctor Who</span>
 				</li>
 				<li>
 					<span class="A-tv">Traveler From Beyond Time</span>
@@ -1442,7 +1448,11 @@ inaugurated. </span>
 					<span class="A-audiobook">Raven Time Lord</span>
 				</li>
 				<li>
-					<span class="A-audiobook">The Savant</span></li><li><span class="A-audiobook">Dr Schmidt<br></span></li>
+					<span class="A-audiobook">The Savant</span>
+				</li>
+				<li>
+					<span class="A-audiobook">Dr Schmidt<br></span>
+				</li>
 				<li>
 					<span class="A-audiobook">Jean Forgeron de Gallifrey</span>
 				</li>
@@ -1483,7 +1493,10 @@ inaugurated. </span>
 					<span class="A-audiobook">Dalek killer</span>
 				</li>
 				<li>
-					<span class="A-tv">The Warrior</span></li><li><span class="A-tv">The Doctor of War<br></span></li>
+					<span class="A-tv">The Warrior</span>
+				</li>
+				<li>
+					<span class="A-tv">The Doctor of War<br></span></li>
 				<li>
 					<span class="A-audiobook">The Great Scourge</span>
 				</li>
@@ -1536,7 +1549,23 @@ inaugurated. </span>
 					<span class="A-tv">The Soothsayer</span>
 				</li>
 				<li>
-					<span class="A-tv">Sweetie</span></li><li><span class="A-tv">The Imp of the Pandorica</span></li><li><span class="A-tv">The Beast of Trenzalore<br></span></li><li><span class="A-tv">The Shadow of the Valeyard</span></li><li><span class="A-tv">The Butcher of Skull Moon</span></li><li><span class="A-tv">The Last Tree of Garsennon<br></span></li>
+					<span class="A-tv">Sweetie</span>
+				</li>
+				<li>
+					<span class="A-tv">The Imp of the Pandorica</span>
+				</li>
+				<li>
+					<span class="A-tv">The Beast of Trenzalore<br></span>
+				</li>
+				<li>
+					<span class="A-tv">The Shadow of the Valeyard</span>
+				</li>
+				<li>
+					<span class="A-tv">The Butcher of Skull Moon</span>
+				</li>
+				<li>
+					<span class="A-tv">The Last Tree of Garsennon<br></span>
+				</li>
 				<li>
 					<span class="A-tv">Merlin</span>
 				</li>
