--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -691,21 +691,18 @@ allows a Gallifreyan precise control over their regenerations.
 				<figure>
 					<img src="images/gallifreydistant.jpg" alt="Gallifrey">
 					<img src="images/gallifreysky.jpg" alt="Night sky above Gallifrey">
+					<img src="images/gallifreysky1.jpg" alt="Night sky above Gallifrey">
 					<figcaption class="A-tv">Gallifrey and the night sky above Gallifrey</figcaption>
 				</figure>
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 				<h2>THE WORLD OF GALLIFREY</h2>
 				<div class="section">
-					<span class="A-tv">Gallifrey is the <span class="A-game">third</span> planet from the primary star.&nbsp;</span><span class="A-tv"><span class="A-audiobook">The
-name Gallifrey translates as 'they that walk in the shadows' and refers
-to the Old Times, when its people existed in the shadows between the
-warm darkness of magick and the cold light of&nbsp;science.</span> Gallifrey is known as the Shining World <span class="A-licensed">(or Jewel)</span> of the Seven Systems. </span><span class="A-fanon">Depending on the season </span><span class="A-audiobook">Gallifrey appears from space, to be a brown and green snow capped planet. </span><span class="A-tv">Gallifrey's diameter is about 3 times that of Sol III (Earth).</span><span class="A-tv"> Despite this, the </span><span class="A-infinity">gravity, orbital radius,</span><span class="A-tv">
-pressure, temperature, and oxygen levels are the same as Earth. As
-Gallifrey appears to have the exact same size and orbit as Alzarius </span>
-					<span class="A-fanon">so its probably also being drawn farther from the sun once every 50 years by another planet in the system.</span>
+					<span class="A-tv">Gallifrey is the <span class="A-game">third</span> planet from the primary star.&nbsp;</span><span class="A-tv"><span class="A-audiobook">The name Gallifrey translates as 'they that walk in the shadows' and refers to the Old Times, when its people existed in the shadows between the warm darkness of magick and the cold light of&nbsp;science.</span> Gallifrey is known as the Shining World <span class="A-licensed">(or Jewel)</span> of the Seven Systems. </span><span class="A-fanon">Depending on the season </span><span class="A-audiobook">Gallifrey appears from space, to be a brown and green snow capped planet. </span><span class="A-tv">Gallifrey's diameter is about 3 times that of Sol III (Earth).</span><span class="A-tv"> Despite this, the </span><span class="A-infinity">gravity, orbital radius,</span><span class="A-tv"> pressure, temperature, and oxygen levels are the same as Earth. As Gallifrey appears to have the exact same size and orbit as Alzarius </span>
+					<span class="A-fanon">so its probably also being drawn farther from the sun once every 50 years by another planet in the system. </span>
 				</div> 
 				<figure>
 					<img src="images/pazithigallifreya.jpg" alt="Pazithi Gallifreya">
+					<img src="images/moon1.jpg" alt="Gallifrey's other moon">
 					<img src="images/moon.jpg" alt="Gallifrey's other moon">
 					<figcaption>
 						<span class="A-audiobook">Pazithi Gallifreya </span>
@@ -713,8 +710,7 @@ Gallifrey appears to have the exact same size and orbit as Alzarius </span>
 					</figcaption>
 				</figure>
 				<div class="section">
-					<span class="A-tv">Gallifrey has two <span class="A-licensed">large </span>moons. </span><span class="A-audiobook">One
-of the moons is called Pazithi Gallifreya which orbits Gallifrey every
+					<span class="A-tv">Gallifrey has two <span class="A-licensed">large </span>moons. </span><span class="A-audiobook">One of the moons is called Pazithi Gallifreya which orbits Gallifrey every
 27 days. The Moon is named after Pazithi the mystic virgin moon goddess. Depending on conditions </span><span class="A-tv">the moon appears to be copper colored and shines even in the sunlight. </span>
 					<span class="A-licensed">This moon has a large supply of Taranium </span>
 					<span class="A-audiobook"> and the moon was covered in mining colonies during the Dark Time. 
@@ -838,11 +834,12 @@ Even with the the ice age, Gallifrey's ice caps are quite tiny <span class="A-fa
 							<span class="A-infinity">of</span> the</span><span class="A-tv"> of Wild Endeavor <span class="A-licensed">near the center of the continent. </span></span><span class="A-tv">Its located <span class="A-licensed">in the wastelands</span> between the mountains of Solace and Solitude. </span><span class="A-tv"><span class="A-licensed">Mount Solace likely lay to the west, while Mount Solitude probably lay on its own to the east. </span></span>
 							<figure>
 								<img src="images/schism1.jpg" alt="Untempered Schism">
-								<figcaption class="A-tv">The Untempered Schism</figcaption>
+								<img src="images/drylands.jpg" alt="The Drylands">
+								<figcaption class="A-tv">The Untempered Schism <span class="A-licensed">and the Drylands</span></figcaption>
 							</figure>
 						</p>
 						<p>
-							<span class="A-tv">The&nbsp;valley between those mountains <span class="A-audiobook">was known as the marshlands in the Old Time and had explosive swamp gas. But the ice age has given it the moniker of</span></span><span class="A-tv"></span><span class="A-tv"> the Drylands by&nbsp;the&nbsp;</span><span class="A-tv"></span><span class="A-tv">outlanders who live there. <span class="A-licensed"></span></span><span class="A-tv">The Untempered Schism is found just outside<span class="A-licensed"> the south-west edge of</span> the Capitol. </span><span class="A-tv"><span class="A-licensed">Another schism, the Crevasse of Memories That Will Be, is located outside the Capitol.&nbsp;</span></span><span class="A-audiobook">During the Dark Times the Capitol often suffers from a bitter wind from the Northern Lakes&nbsp;</span><span class="A-audiobook"><span class="A-licensed">located at least 200 miles north of the Capitol (if not more). </span></span>
+							<span class="A-tv">The valley between those mountains <span class="A-audiobook">was known as the marshlands in the Old Time and had explosive swamp gas. But the ice age has given it the moniker of</span></span><span class="A-tv"></span><span class="A-tv"> the Drylands by&nbsp;the&nbsp;</span><span class="A-tv"></span><span class="A-tv">outlanders who live there. <span class="A-licensed"></span></span><span class="A-tv">The Untempered Schism is found just outside<span class="A-licensed"> the south-west edge of</span> the Capitol. </span><span class="A-tv"><span class="A-licensed">Another schism, the Crevasse of Memories That Will Be, is located outside the Capitol.&nbsp;</span></span><span class="A-audiobook">During the Dark Times the Capitol often suffers from a bitter wind from the Northern Lakes&nbsp;</span><span class="A-audiobook"><span class="A-licensed">located at least 200 miles north of the Capitol (if not more). </span></span>
 						</p>
 							<p>
 							<span class="A-tv"><span class="A-licensed">The Capitol isn't too far from</span> the red grass covered hillsides of Mount Perdition. <span class="A-licensed"></span></span><span class="A-tv">The Master's <span class="A-notbbc">Chapter</span>house <span class="A-audiobook">of Oakdown</span> can be found on its slopes. </span><span class="A-tv"><span class="A-licensed">Perdition
