--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -302,11 +302,11 @@ Lords.) <span class="A-fanon">Brainbuffing might also have involved </span>Galli
 						<span class="A-game">repress their impulses and </span>focus on living a life of duty
 						<span class="A-game">and obedience. <span class="A-audiobook"><span class="A-fanon">For this reason,</span>
 there are no playgrounds on modern Gallifrey. A common Gallfreyan toy
-is an onion doll.&nbsp;It is a small colorful ball shaped object which
+is an onion doll. It is a small colorful ball shaped object which
 can be split in half with a twist to reveal a slightly larger different
-colored sphere on the inside.&nbsp;This can be opened to reveal another
+colored sphere on the inside. This can be opened to reveal another
 even larger ball. The user can continue to open each one, until the
-resulting balls are too large to be twisted open by a single person.</span> </span></span><span class="A-tv">Some child<span class="A-notbbc">rene</span> are allowed to play with stuffed rabbit-like toys. Novices at the wear long black and white gowns. </span>
+resulting balls are too large to be twisted open by a single person. </span></span></span><span class="A-tv">Some child<span class="A-notbbc">rene</span> are allowed to play with stuffed rabbit-like toys. Novices at the wear long black and white gowns. </span>
 					<span class="A-game">Black and White robes appear to indicate Gallifreyans who are not currently aliened with a particular Chapter. </span>
 				</div>
 			</div>
@@ -320,7 +320,6 @@ resulting balls are too large to be twisted open by a single person.</span> </sp
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 				<h2>RELIGION AND MYTHOLOGY</h2>
 				<div class="section">
-
 					<div class="box">
 						<h2>Old Times: The Order of the Pythia</h2>
 						<figure>
@@ -335,19 +334,22 @@ dimensions (though the Universe has 11 dimensions). After Event 0 the
 Mother Goddess used the <span class="A-alternate">Aurora Temporalis (Anvils of Heaven) to create</span> and pour the dimension of Time itself into the void of the empty Universe. </span><span class="A-audiobook">The seconds of Time were said to be created by the Temporal Phoenix that was imprisoned in a time loop by the Philesians.</span></p>
 					<p><span class="A-audiobook">The
 primary Gallifreyan gods worshiped by the original Shobogans during the
-Old Time are the Higher Eternals known as the Menti Celesti&nbsp;</span><span class="A-audiobook">('heavenly
+Old Time are the Higher Eternals known as the Menti Celesti </span><span class="A-audiobook">('heavenly
 minds'). Pain, Death, and Time the primary gods, but Fate (also known
-as Osuda) is also known for her hallowed hand. Other deities include </span><span class="A-audiobook"> mystic virgin moon goddess Pazithi who's name adorns one of Gallifrey's moons. <span class="A-game">The Menti Celesti drove all of Gallifrey’s civilization.&nbsp;</span></span></p><p><span class="A-audiobook">The
+as Osuda) is also known for her hallowed hand. Other deities include </span><span class="A-audiobook"> mystic virgin moon goddess Pazithi who's name adorns one of Gallifrey's moons. <span class="A-game">The Menti Celesti drove all of Gallifrey’s civilization. </span></span>
+</p>
+<p>
+	<span class="A-audiobook">The
 ratio 1 to 812 is key to understanding the 12 dimensional nature of
 quantum string theory. When the Shobogans discovered this ratio, most</span><span class="A-audiobook"> Shobogans</span><span class="A-audiobook"> saw it a conclusive proof of the existence of</span><span class="A-audiobook"> the Menti Celesti. But most agreed that the gods only
 observe and do not interfere. Still, in times of crisis, the Shobogans
-pray to the Menti Celesti for salvation.&nbsp;</span><span class="A-audiobook">Gallifreyans have also been known to mention a Devil from time to time. </span><span class="A-alternate">Early in their history the Gallifreyans came to believe that if they killed all the evil people in the Universe then
+pray to the Menti Celesti for salvation. </span><span class="A-audiobook">Gallifreyans have also been known to mention a Devil from time to time. </span><span class="A-alternate">Early in their history the Gallifreyans came to believe that if they killed all the evil people in the Universe then
 						the good people who remained would become evil. Light can not exist without darkness. If evil were destroyed then good
 						would vanish as well. </span><span class="A-fanon"><span class="A-audiobook">Ancient Gallifreyans belive that Evil could be used to repel Evil.&nbsp;&nbsp;</span></span><br><span class="A-audiobook"><br>Homes
 have alcoved shrines, which are obscured by curtains with frames of
 woven wood and flowers. Votive gifts and offerings are placed on the
 ledge to gain favor with the Menti Celesti. It is traditional to make
-an offering to the Menti Celesti when good events come to pass.&nbsp;</span></p>
+an offering to the Menti Celesti when good events come to pass. </span></p>
 						<p><span class="A-audiobook">At one point the Shobogans (like all other life in the cosmos) could live forever baring accidents. <span class="A-licensed">According
 to ancient fairytales, Death’s Messenger arrived on Gallifrey on Mount
 Perdition, and it was there that Presus fought the Messenger and gained
@@ -355,15 +357,19 @@ the favor of the Goddess Time.</span> <span class="A-fanon">This could refer to 
 Kotturuh brought their gift of mortality to the Shobogans of Gallifrey.
 The ancient Shobogans referred to dying as facing the Ultimate. </span><span class="A-notbbc">Modern Gallifreyan’s fear death even more than humans do. </span>
 					<span class="A-audiobook">Some Time Lords believed the souls of the dead ended up in the sea and that you could hear them whispering. This could
-						be the Hell referenced in Gallifreyan legends.&nbsp;</span></p><p><span class="A-audiobook"></span><span class="A-licensed"><span class="A-fanon"><span class="A-audiobook">In the Bright Past of Gallifrey </span></span></span><span class="A-audiobook"><span class="A-audiobook">the irrational force
-						<span class="A-fanon">of Odic Energy</span> was plentiful. Odic Energy made miraculous healing and acts of prophecy possible.</span></span><span class="A-licensed"><span class="A-fanon"><span class="A-audiobook"> Among the Shobogans the ability to see the future could be attained by certain women. </span><span class="A-game">These rare visionaries that developed there </span></span></span><span class="A-licensed"><span class="A-fanon"><span class="A-game">precognitive</span></span></span><span class="A-licensed"><span class="A-fanon"><span class="A-game"> powers by staring into the Untempered Schism. Their minds became connected and nearly merged with the&nbsp;<span class="A-fanon"></span>Astral
+						be the Hell referenced in Gallifreyan legends. </span>
+					</p>
+					<p>
+						<span class="A-licensed"><span class="A-fanon"><span class="A-audiobook">In the Bright Past of Gallifrey </span></span></span><span class="A-audiobook"><span class="A-audiobook">the irrational force
+						<span class="A-fanon">of Odic Energy</span> was plentiful. Odic Energy made miraculous healing and acts of prophecy possible.</span></span><span class="A-licensed"><span class="A-fanon"><span class="A-audiobook"> Among the Shobogans the ability to see the future could be attained by certain women. </span><span class="A-game">These rare visionaries that developed there </span></span></span><span class="A-licensed"><span class="A-fanon"><span class="A-game">precognitive</span></span></span><span class="A-licensed"><span class="A-fanon"><span class="A-game"> powers by staring into the Untempered Schism. Their minds became connected and nearly merged with the Astral
 Vortex. They could see the future of specific people, places, and
 species in amazing detail. Those women who spent too much time with
-their minds in the Vortex, became disconnected and catatonic. </span></span></span><span class="A-audiobook">These </span><span class="A-audiobook"><span class="A-audiobook"><span class="A-licensed">wandering </span></span></span><span class="A-audiobook">seers </span><span class="A-audiobook"><span class="A-audiobook"><span class="A-licensed">can be found traveling from town to town and </span></span></span><span class="A-audiobook">traditionally </span><span class="A-audiobook">subsist on a diet of </span><span class="A-audiobook">fish tongues.&nbsp;</span></p>
+their minds in the Vortex, became disconnected and catatonic. </span></span></span><span class="A-audiobook">These </span><span class="A-audiobook"><span class="A-audiobook"><span class="A-licensed">wandering </span></span></span><span class="A-audiobook">seers </span><span class="A-audiobook"><span class="A-audiobook"><span class="A-licensed">can be found traveling from town to town and </span></span></span><span class="A-audiobook">traditionally </span><span class="A-audiobook">subsist on a diet of </span><span class="A-audiobook">fish tongues. </span>
+</p>
 						<p><span class="A-audiobook">The
 greatest of the oracles was the exalted Pythia. The Constitution of the
 Gallifreyan Empire stated the Pythia was chosen by the Menti Celesti to
-rule all of Gallifrey's Shobogans. She was the </span><span class="A-audiobook">Embodiment of Gallifrey itself and </span><span class="A-audiobook">Guardian/Crown of the Gallifreyan Empire.&nbsp;</span><span class="A-audiobook">She
+rule all of Gallifrey's Shobogans. She was the </span><span class="A-audiobook">Embodiment of Gallifrey itself and </span><span class="A-audiobook">Guardian/Crown of the Gallifreyan Empire. </span><span class="A-audiobook">She
 was also the symbol of the planet's fertility, Mouthpiece of the Gods,
 and Guardian of the Great Book of Future Legends. She had the title of
 Excellency <span class="A-alternate">(and possibly Majestrix as well).</span>&nbsp;</span><span class="A-audiobook">Amulets
