--- a/roopodcast.html
+++ b/roopodcast.html
@@ -249,6 +249,18 @@
 					<a href="https://youtu.be/YMNdCX4KyVM" target="_blank">Ep 11: The Star Beast</a> 
 					<br> 
 					<span class="A-fanon">A look at the 60th Anniversary special, 'The Star Beast'. We also discuss stories that happened more than once, and the TARDIS Desk-Top Theme controls. </span>
+					<br> 
+					<a href="https://youtu.be/6Vtbskv7ukA" target="_blank">Ep 12: Wild Blue Yonder</a> 
+					<br> 
+					<span class="A-fanon">In this episode Sohail and I take a look at the 60th Anniversary special, 'Wild Blue Yonder'.  We also discuss stories the massive destruction the Universe has suffered, and the TARDIS Hostile Action Displacement System. </span>
+					<br> 
+					<a href="https://youtu.be/1YZVoICWVI0" target="_blank">Ep 13: The Giggle</a> 
+					<br> 
+					<span class="A-fanon">In this episode Sohail and I take a look at the 60th Anniversary special, 'The Giggle'.  We also discuss the Lovecraftian origin of the Toymaker, and TARDIS Cloning.   </span>
+					<br> 
+					<a href="https://youtu.be/cBVCv8cavwo" target="_blank">Ep 14: The Church on Ruby Road</a> 
+					<br> 
+					<span class="A-fanon">In this episode Sohail and I take a look at the 2023 Christmas special, 'The Church on Ruby Road'. We also discuss the origin of magic in the Whoniverse, and TARDIS Amaranths. </span>
 				</span>
 			</div>
 		</div>
