--- a/rootimeline2.html
+++ b/rootimeline2.html
@@ -446,7 +446,7 @@ of Time. On hearing this, Rassilon decrees that</span>&nbsp;</span></span><span 
 						</span>
 					</span>
 					<span class="A-tv">(As far as the Doctor knows) These devices are the most powerful and sophisticated remote stellar manipulators that
-						will ever be created.</span></p>
+						will ever be created.&nbsp;</span></p>
 				<p>
 					<span class="A-game">-23.93&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</span>
@@ -1040,9 +1040,11 @@ the naked singularity of Qqaba behind an event horizon. <span class="A-tv">Thus 
 					&nbsp;&nbsp;&nbsp;
 					<span class="A-licensed">(the year Omega dies / day 206)</span>
 					<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-					<span class="A-infinity">Patience sees the Starbreakers return from Qqaba. </span>
-					<span class="A-infinity">Patience will go on to live in the House of Lungbarrow for countless generations. <span class="A-licensed">The Hands of Omega are disabled and locked in a vault.&nbsp; </span></span>
-					<br>
+					<span class="A-infinity">Patience sees the Starbreakers return from Qqaba.&nbsp;</span><span class="A-infinity"><span class="A-licensed">The Hands of Omega are disabled and locked in a vault.&nbsp;&nbsp;</span></span></p><p><span class="A-notbbc">??&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Other has
+a vast estate right outside the Capitol.&nbsp;It looked like a giant
+rose garden from 1913 AD Earth. </span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook"><span class="A-licensed">The Doctor’s Rose Garden has thousands and thousands of rose bushes.&nbsp; </span></span></span></span>
+					
 				</p>
 				<p>
 					<span class="A-licensed">
@@ -1598,7 +1600,7 @@ Time Lords. <br>
 				<span class="A-audiobook">
 					<span class="A-fanon">
 						<span class="A-tv">
-							<span class="A-audiobook">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;</span></span></span></span><span class="A-audiobook"><span class="A-fanon"><span class="A-tv"><span class="A-audiobook">The Hervoken fought a war with the Carrionites. &nbsp;</span></span></span></span><span class="A-audiobook"><span class="A-fanon"><span class="A-tv"><span class="A-audiobook">Carrionites and </span>
+							<span class="A-audiobook">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;</span></span></span></span><span class="A-audiobook"><span class="A-fanon"><span class="A-tv"><span class="A-audiobook">The Hervoken fought a war with the Carrionites.&nbsp;</span></span></span></span><span class="A-audiobook"><span class="A-fanon"><span class="A-tv"><span class="A-audiobook">Carrionites and </span>
 						</span>
 					</span>
 				</span>
@@ -1626,7 +1628,7 @@ Time Lords. <br>
 						<span class="A-tv"> the 14 stars of the Rexel Planetary configuration.
 							<span class="A-audiobook">This is almost certainly the same as the Hecatryx dimension that all the witches exist in&nbsp;"The Witch from the Well.
 								"&nbsp;
-								<span class="A-licensed">By the time of the Doctor the Carrionites will be known only in legend. &nbsp;</span>
+								<span class="A-licensed">By the time of the Doctor the Carrionites will be known only in legend.&nbsp;</span>
 							</span>
 							<br>
 							<span class="A-game"></span>
@@ -1670,12 +1672,28 @@ Time Lords. <br>
 								<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Yssgaroth make their first attack
 								on Gallifrey, destroy some of the machinery used to create the Eye of Harmony, leaving an impossibly massive empty
 								space sitting under the Panopticon, with only the Eye of Harmony itself at the center of the void.&nbsp; This void
-								becomes known as the Caldera.
-								<br>
-							</span>
-						</span>
+								becomes known as the Caldera.&nbsp;</span></span></span></p><p style="text-align: center;"><img src="images/logopolis.jpeg">
+					<br>
+					<span class="A-tv">Logopolis&nbsp;</span></p><p><span class="A-tv"></span><span class="A-tv">?? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; (aeons/billions of years before 1982 / probably
+					before the&nbsp;</span><span class="A-tv">Vampire King falls through a CVE /</span>
+				<span class="A-audiobook"> 1 billion years after the Universe ceases to expand and reaches equilibrium / after Tecteun replicates the Immortality Virus / </span>
+				<span class="A-fanon">before the Time Lords / </span>
+				<span class="A-notbbc">after the Gallifreyans evolve)</span>
+				<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<span class="A-audiobook">
+					<span class="A-licensed">When the Doctor reassembles the Key to Time in The Armageddon Factor one of the segments is damage. This allowed
+						<span class="A-fanon">the Black Guardian</span> to
+						<span class="A-audiobook">&nbsp;create a</span>
 					</span>
-				</p>
+					<span class="A-audiobook"> tailored virus that causes</span></span><span class="A-tv"> entropy to begin inceasing at an accelerated
+					<span class="A-licensed">and even exponential </span>rate.</span>
+				<span class="A-tv">The Logopolitans begin using the Block Transfer Computation to save the Universe from this Heat Death.
+					<span class="A-audiobook">
+						To maintain the equilibrium,</span> they drain entropy into closed vacuum embodiments.&nbsp;This stops the destruction
+					of the Universe </span>
+				<span class="A-audiobook"> by preventing the Emerald Wave of Entropy. <span class="A-infinity">The Universe's collapse is delayed until a point around 360,000,000,000 AD.</span>
+					<span class="A-tv">In this way the planet Logopolis becomes one of the anchoring points for the entire causal nexus. The people of Logopolis
+						are driven not by individual need but by mathematical necessity.&nbsp;</span></span></p>
 
 				<p>
 					<span class="A-audiobook">??&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Rassilon meets the Guardians.&nbsp;
@@ -1683,10 +1701,7 @@ Time Lords. <br>
 							He is informed that even as the </span>
 					</span>
 					<span class="A-audiobook">
-						<span class="A-game">Time Lords have authority over the Spiral Politic so to do the Guardians have authority over the Time Lords.
-						</span>
-					</span>
-					<span class="A-audiobook">&nbsp; Rassilon&nbsp; is banished because he questioned to deeply and because of the arrogance of the Time Lords.&nbsp;
+						<span class="A-game">Time Lords have authority over the Spiral Politic so to do the Guardians have authority over the Time Lords.</span></span><span class="A-audiobook"> Rassilon&nbsp;is banished because he questioned to deeply and because of the arrogance of the Time Lords.&nbsp;
 						<span class="A-game"> Rassilon will keep the knowledge of the Guardians' supervision of the Time Lords a secret that will be passed down
 							to each President upon his ratification.&nbsp;&nbsp;&nbsp;</span>
 					</span>
@@ -2284,7 +2299,7 @@ exist without ever having an origin. </span>
 					<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; 
 					Little Rose Riding Hood: ‘Rose’ <span class="A-fanon">(aka Susan)</span> encounters a Zygon when she attempts to visit her grandmother <span class="A-fanon">(Patience)</span>
 in the dark forest near her home. he 9th Doctor arrives and deals with
-it. This story becomes a popular fairytale told to time-tots. </span></span>
+it. This story becomes a popular fairytale told to time-tots.&nbsp; </span></span>
 				</p>
 				<p>
 					<span class="A-audiobook">??&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;(when Gallifrey is young,
@@ -2555,8 +2570,7 @@ order, I.M. Foreman, begins wandering outer Gallifrey. &nbsp; <span class="A-fan
 							<br>
 						</div>
 						<p style="text-align: left;">
-							<span class="A-fanon">9
-								<span class="A-licensed">.44&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;
+							<span class="A-fanon">9<span class="A-licensed">.44&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;
 								<span class="A-audiobook">&nbsp; (On the first Otherstide)</span>
 							</span>
 							<br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
@@ -2565,8 +2579,7 @@ order, I.M. Foreman, begins wandering outer Gallifrey. &nbsp; <span class="A-fan
 						</p>
 				</div>
 				<p style="text-align: left;">
-					<span class="A-fanon">9
-						<span class="A-licensed">.44</span>&nbsp; &nbsp; &nbsp; &nbsp; </span>
+					<span class="A-fanon">9<span class="A-licensed">.44</span>&nbsp; &nbsp; &nbsp; &nbsp; </span>
 					<span class="A-licensed">
 						<span class="A-licensed">(Susan is 6</span> / day 162 /
 						<span class="A-audiobook">Otherstide) </span>
@@ -2583,11 +2596,13 @@ order, I.M. Foreman, begins wandering outer Gallifrey. &nbsp; <span class="A-fan
 					<span class="A-notbbc">
 						(because of the manipulation of the Black Guardian)</span>
 					<span class="A-audiobook"> </span>
-					<span class="A-audiobook">enters the Progenitive Chamber.&nbsp; Rassilon assumed that he died in the energy of the open progenitive cascades,
+					<span class="A-audiobook">enters the Progenitive Chamber.&nbsp;Rassilon assumed that he died in the energy of the open progenitive cascades,
 						however if reality he merges with the genetic coding of the Prime Distributors that feed all the Looms, creating the
 						first Otherstide
-						<span class="A-alternate">(aka Othersmass).</span> &nbsp;Susan is unable to get to Terserus and ends up living on the streets of the Capitol.&nbsp;
-						She sleeps in the ruins of the temple and has to sell her books (with metal covers) to survive. </span>
+						<span class="A-alternate">(aka Othersmass).</span>
+&nbsp;Susan is unable to get to Terserus and ends up living on the
+streets of the Capitol.&nbsp;She sleeps in the ruins of the temple and
+has to sell her books (with metal covers) to survive.&nbsp;</span><span class="A-infinity">Patience will go on to live in the House of Lungbarrow for countless generations. </span><span class="A-audiobook"> </span>
 					<span class="A-fanon">For more information see: </span>
 					<a href="roobiology.html">Gallifreyan Holidays</a>
 				</p>
@@ -2596,8 +2611,7 @@ order, I.M. Foreman, begins wandering outer Gallifrey. &nbsp; <span class="A-fan
 					<span class="A-fanon">9.5??</span>
 					<span class="A-licensed">&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (after his coup fails)
 						<br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; General Gimel becomes the first Time Lord
-						to be executed by vaporization</span>
-					<span class="A-licensed">.</span>
+						to be executed by vaporization</span><span class="A-licensed">.</span>
 				</p>
 				<p>
 					<span class="A-fanon">9.5?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -2661,7 +2675,7 @@ order, I.M. Foreman, begins wandering outer Gallifrey. &nbsp; <span class="A-fan
 				<p style="text-align: left;">
 					<span class="A-fanon">9.6?? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</span>
-					<span class="A-infinity">The Watch have special rules about four people who they are supposed to kill.&nbsp; This list includes Omega (if he
+					<span class="A-infinity">The Watch have special rules about four people who they are supposed to kill.&nbsp;This list includes Omega (if he
 						should ever return) and the Doctor (but only if he takes certain actions).&nbsp;
 						<span class="A-game">These are the same four Elementals that survive the Last Great Time War.</span>
 					</span>
@@ -2682,7 +2696,7 @@ order, I.M. Foreman, begins wandering outer Gallifrey. &nbsp; <span class="A-fan
 					<br>
 				</span>
 				<span class="A-audiobook">&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-					<span class="A-notbbc">The Caldera holding</span> the Eye of Harmony is sealed.&nbsp; It will not be breached for millions of years. </span>
+					<span class="A-notbbc">The Caldera holding</span> the Eye of Harmony is sealed.&nbsp;It will not be breached for millions of years. </span>
 				<span class="A-fanon">
 					<span class="A-audiobook"></span>
 				</span>
@@ -2726,8 +2740,7 @@ order, I.M. Foreman, begins wandering outer Gallifrey. &nbsp; <span class="A-fan
 					</span>
 					<br>
 				</div>
-				<span class="A-fanon">10
-					<span class="A-licensed">.44
+				<span class="A-fanon">10<span class="A-licensed">.44
 						<span class="A-fanon">?</span>
 					</span>
 					<span class="A-fanon">&nbsp;</span>
@@ -2870,7 +2883,7 @@ used it to upgrade the technology and guards of her kingdom until they
 threatened to take over.&nbsp;Fortunately Mr Clever (probably the 12th
 Doctor) appeared and defeated them with gold.&nbsp;</span>&nbsp;</span></span></p><p align="left"><span class="A-notbbc"><span class="A-tv">??&nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (after time travel is invented /
-before Rassilon ends the Games)&nbsp;&nbsp;&nbsp; <br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Cybermen aren't allowed to play in the Games.</span></span></p><p>
+before Rassilon ends the Games <span class="A-licensed">/ after Rassilon has some influance over the Games)&nbsp;&nbsp;&nbsp; </span><br>&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span></span><span class="A-tv"><span class="A-licensed">&nbsp;&nbsp;&nbsp; Rassilon is responsible for the rule that </span></span><span class="A-tv">Cybermen were not allowed in the Death Zone because they fight too well.&nbsp;</span></p><p>
 					<span class="A-audiobook">?&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; The Garvond (it has thousands of names all
 						variations on
 						<i>gjara' vont</i> -"of darkest thought") is created and imprisoned in the Matrix.&nbsp;It feeds on the fear and resentment
