--- a/rootimeline4.html
+++ b/rootimeline4.html
@@ -11,168 +11,25 @@
 	<style>
 	</style></head>
 <body>
-	<script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script> 
 		var isMobile = navigator.userAgent.match(/(iPhone|iPod|iPad|Android)/);
 		if (isMobile != null) {
 			document.body.className += ' ' + 'mobile';
 		}
-	</script>
-		<div class="noshow">
-			<a href="index.html">Return To Master Index</a>
-		</div>
-	<div class="header">
-		<div id="logo">
-			<a href="index.html">
-				<img src="images/BannerNEW.png" title="Doctor Who Rassilon Omega and that Other Guy" alt="Doctor Who Rassilon, Omega, and that Other Guy">
-			</a>
-		</div>
-		<div class="nav">
-			<ul>
-				<li>
-					<a href="index.html">Home</a>
-				</li>
-				<div class="dropdown">
-					<li class="dropbtn">Gallifreyan Data</li>
-					<ul class="dropdown-content">
-						<li>
-							<a href="roogallifrey.html">Planet Gallifrey</a>
-						</li>
-						<br>
-						<li>
-							<a href="roobiology.html">Gallifreyan Biology</a>
-						</li>
-						<br>
-						<li>
-							<a href="roolifedeath.html">Life on Gallifrey</a>
-						</li>
-						<br>
-						<li>
-							<a href="roogovernment.html">Government</a>
-						</li>
-					</ul>
-				</div>
-				<div class="dropdown">
-					<li class="dropbtn">Time Lord Data</li>
-					<ul class="dropdown-content">
-						<li>
-							<a href="rooweb.html">The Web of Time</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimelord.html">Time Lords</a>
-						</li>
-						<br>
-						<li>
-							<a href="https://docs.google.com/file/d/0B6zjenFzzQn1MF9xeHNNS1M1akU/edit?pli=1" target="_blank">TARDIS Technical Index</a>
-						</li>
-					</ul>
-				</div>
-				<div class="dropdown">
-					<li class="dropbtn">History of the Time Lords</li>
-					<ul class="dropdown-content">
-						<li>
-							<a href="rootimeline1.html">I The Dark Time</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimeline2.html">II Time of Legend</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimeline3.html">III Middle Gallifrey</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimeline4.html">IV Pre-Classical Gallifrey</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimeline5.html">V Classical Gallifrey</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimeline6.html">VI Pre-War Gallifrey</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimeline7.html">VII The Time War In Heaven</a>
-						</li>
-						<br>
-						<li>
-							<a href="rootimeline8.html">VIII Post Gallifrey</a>
-						</li>
-					</ul>
-				</div>
-				<li>
-					<a href="#table">Top / Table of Contents</a>
-				</li>
-				<div class="dropdown">
-					<li class="dropbtn">Podcast / Misc</li>
-					<ul class="dropdown-content">
-						<li>
-							<a href="roopodcast.html">My Youtube Podcast</a>
-						</li>
-						<br>
-						<li>
-							<a href="roochildren.html">Children that Time Forgot</a>
-						</li>
-						<br>
-						<li>
-							<a href="rooappendix.html">Appendix</a>
-						</li>
-						<br>
-						<li>
-							<a href="rooconstruction.html">Human History</a>
-						</li>
-						<br>
-						<li>
-							<a href="rooconstruction.html">Dalek Biology &amp; Culture</a>
-						</li>
-						<br>
-						<li>
-							<a href="rooconstruction.html">Dalek Timeline</a>
-						</li>
-					</ul>
-				</div>
-				<li>
-					<a href="index.html#key">Sources</a>
-				</li>
-				<div class="innerlink">
-					<div class="dropdown">
-						<li class="dropbtn">Quick Color Key</li>
-						<ul class="dropdown-content">
-							<li class="A-tv">TV Episodes and shorts</li>
-							<br>
-							<li class="A-audiobook">Novels and Audio Dramas sources</li>
-							<br>
-							<li class="A-licensed">Comics and other Licensed reference sources</li>
-							<br>
-							<li class="A-game">Games and Behind-the-Scenes sources</li>
-							<br>
-							<li class="A-infinity">Info from the novel The Infinity Doctors</li>
-							<br>
-							<li class="A-alternate">Alternate timelines stories</li>
-							<br>
-							<li class="A-notbbc">Licensed but non-BBC spin-offs</li>
-							<br>
-							<li class="A-fanon">Fan theory and popular fanon</li>
-							<br>
-							<br>
-							<li>? The event occurred approximately in this interval.</li>
-							<br>
-							<li>?? A pretty wild guess as to when this event occurred.</li>
-						</ul>
-					</div>
-				</div>
-				<li>
-					<a href="#footer">Contact</a>
-				</li>
-				<li>
-					<h3>click on paragraphs to see color coding for sources</h3>
-				</li>
-			</ul>
-		</div>
+		$(function(){
+			$("#navbar").load("navbar.html"); 
+		});
+		$(function(){
+			$("#footer").load("footer.html"); 
+		});
+	</script> 
+	<div class="noshow">
+		<a href="index.html">Return To Master Index</a>
 	</div>
+
+	<div id="navbar"></div>
+
 	<div id="decoration-left">
 		<img src="images/circular8.png">
 	</div>
@@ -201,7 +58,8 @@
 		<div class="article">
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 			<h2>TABLE OF CONTENTS</h2>
-			<div class="table cf">
+			<div id="timeline4nav"></div>
+			<!-- <div class="table cf">
 				<figure id="preclassic">
 					<img src="images/docgallifrey.jpg" title="The First Doctor" alt="The First Doctor">
 				</figure>
@@ -243,7 +101,8 @@
 						<a href="#mortality">The Auld Mortality Timeline</a>
 					</li>
 				</ul>
-			</div>
+			</div> -->
+
 			<h3>Click on paragraphs to see color coding for sources</h3>
 		</div>
 		<!--
@@ -651,7 +510,7 @@ belly-button his other cousins called him Snail and Wormhole. &nbsp;The
 				<span class="A-fanon">
 				and the "Morbius Doctors"</span>
 				<span class="A-audiobook">
-					were conscious in him. &nbsp;</span>
+					were conscious in him. </span>
 				<span class="A-audiobook">
 					<span class="A-infinity">The Other/Doctor loses access to memory of Patience and and his past as the Morbius Doctors. &nbsp;</span>
 				</span>
@@ -670,9 +529,9 @@ belly-button his other cousins called him Snail and Wormhole. &nbsp;The
 
 			<p align="center">
 				<span class="A-audiobook">
-					<img style="" src="images/docname.jpg">
-					<img style="" alt="Doctor's CIA Name" src="images/docname2.jpg">
-					<img style="" src="images/name.jpg">
+					<img src="images/docname.jpg">
+					<img alt="Doctor's CIA Name" src="images/docname2.jpg">
+					<img src="images/name.jpg">
 					<br>
 					<span class="A-licensed">The Doctor's name in the Omegabet,
 						<span class="A-tv">his CIA designation, </span>
@@ -7925,20 +7784,8 @@ wasn't.&nbsp; Instead it is transferred into Badger.&nbsp;&nbsp;</span>
 		</div>
 	</div>
 	<br>
-	<div id="footer">
-		<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
-		<h2>CONTACT HAS BEEN MADE</h2>
-		<p>
-			<span class="A-fanon">If you think I've forgotten some data, have a question, or just want to give your opinion on my page, then please don't
-				hesitate to let me know. </span>
-		</p>
-		<p>
-			<a href="mailto:willbswift@hotmail.com">Email</a> Marnal Gate at willbswift@hotmail.com</p>
-		<p>Follow me on
-			<a href="https://www.facebook.com/brian.swift.79" target="_blank">Facebook</a>
-		</p>
-		<p>Copyright 2018 AD</p>
-	</div>
+	<div id="footer"></div>
+
 	<!-- Any text in these brackets is ignored and can be used for descriptive notes about how the program is written -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="javascript/rooscript.js" type="text/javascript"></script>
